GNOME Bugzilla – Bug 773905
rtpjitterbuffer: fix bug in reschedule_timer
Last modified: 2016-12-05 09:18:04 UTC
Created attachment 339054 [details] [review] test and fix The new timeout is always going to be (timeout + delay), however, the old behavior compared the current timeout to just (timeout), basically being (delay) off. This would happen if rtx-delay == rtx-retry-timeout, with the result that a second rtx attempt for any buffers would be scheduled immediately instead of after rtx-delay ms. Simply calculate (new_timeout = timeout + delay) and then use that instead.
commit bea35f97c8eeca4f78a99d61d4bd04a2be2124cf Author: Havard Graff <havard.graff@gmail.com> Date: Thu Nov 3 16:33:53 2016 +0100 rtpjitterbuffer: fix bug in reschedule_timer The new timeout is always going to be (timeout + delay), however, the old behavior compared the current timeout to just (timeout), basically being (delay) off. This would happen if rtx-delay == rtx-retry-timeout, with the result that a second rtx attempt for any buffers would be scheduled immediately instead of after rtx-delay ms. Simply calculate (new_timeout = timeout + delay) and then use that instead. https://bugzilla.gnome.org/show_bug.cgi?id=773905